src/test/ui/single-use-lifetime/zero-uses-in-fn.stderr
error: lifetime parameter `'a` never used
  --> $DIR/zero-uses-in-fn.rs:8:14
   |
LL | fn september<'a>() {}
   |             -^^- If I were you, I would simply elide the unused lifetime
   |
note: lint level defined here
  --> $DIR/zero-uses-in-fn.rs:5:9
   |
LL | #![deny(unused_lifetimes)]
   |         ^^^^^^^^^^^^^^^^

error: lifetime parameter `'a` never used
  --> $DIR/zero-uses-in-fn.rs:12:12
   |
LL | fn october<'a, 'b, T>(s: &'b T) -> &'b T {
   |            ^^--
   |            |
   |            If I were you, I would simply elide the unused lifetime

error: lifetime parameter `'b` never used
  --> $DIR/zero-uses-in-fn.rs:18:17
   |
LL | fn november<'a, 'b>(s: &'a str) -> &'a str {
   |               --^^
   |               |
   |               If I were you, I would simply elide the unused lifetime

error: aborting due to 3 previous errors

